<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roadrover_bringup</name>
  <version>0.0.0</version>
  <description>Bringup launch file for roadrover: usb_cam, nmea_navsat_driver, and foxglove_bridge</description>
  <maintainer email="prasadshingne@gmail.com">pss</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>usb_cam</exec_depend>
  <exec_depend>nmea_navsat_driver</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
